Remove the bad option